Clean CSS and fix positioning on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -96,28 +96,6 @@
 	color: #000;
 }
 
-.thoughtsDescription {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin: auto;
-	transform: translate(-50%, -50%);
-	padding: 2em;
-	text-align: center;
-}
-
-.thoughtsDescription h1, p {
-	color: #F5F5F5;
-}
-
-.thoughtsDescription  p{
-	font-size: small;
-}
-
-#firstArticle {
-	background-image: url(/assets/images/thoughtsFront.jpg);
-}
-
 .card-body p {
 	color: #455D7A;
 }
@@ -222,6 +200,11 @@
 		align-self: center;
 		justify-content: center;
 	}
+
+	.description {
+		position: relative;
+		top: 25vh;
+	}
   }
 
 @media screen and (min-width: 600px) {
@@ -233,12 +216,4 @@
 		width: 28%;
 		display: none;
 	  }
-}
-
-.floatingBottomRight {
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  border-radius: 12px;
-  max-width: 300px;
 }
